# PDC_FINAL

./: .gitignore  AGENTS.md  instruction.md
code/: README.md  pyproject.toml  run_all.sh
code/CUDA/: Makefile  scoring_cuda.ipynb  scoring_kernel.cu  scoring_pycuda.py
code/C_OpenMP_MPI/: Makefile  npy_io.c  npy_io.h  scoring_mpi  scoring_mpi.c  scoring_openmp  scoring_openmp.c
code/data/: generate_data.py
code/python/: common.py  multicore.py  plot_benchmark.py  sequential.py
code/python/tests/: test_baseline.py
code/results/: benchmark.csv
code/results/plots/: gen_docs.py
context/.IA/: architecture.md  coding-standards.md  constraints.md  directory-structure.md  instructions.md  rules.md  stack.md
context/SDD-1/: done-criteria.md
context/handoffs/: 0.md
context/project/: decisions.md  phases.md  requirements.md  risks.md
context/state/: active-tasks.md  current-phase.md  known-issues.md  progress.md
docs/arquitectura/: main.tex
docs/manual_tecnico/: main.tex  portada.tex  referencias.bib
docs/manual_tecnico/capitulos/: 01_introduccion.tex  02_objetivos.tex  03_fundamentos.tex  04_arquitectura.tex  05_estructura_repositorio.tex  06_generacion_datos.tex  07_secuencial.tex  08_multicore.tex  09_openmp.tex  10_mpi.tex  (+7 more)
docs/manual_usuario/: main.tex
others/: proyecto_final.md
traceability_data/: 2026_05_31_00-00.md  2026_06_05_13-36.md  2026_06_14_16-01.md  2026_06_14_16-42.md  2026_06_14_17-18.md  2026_06_15_14-24.md  2026_06_15_14-36.md  2026_06_15_15-24.md  2026_06_15_19-22.md  2026_06_15_19-32.md  2026_06_16_00-43.md  2026_06_16_00-57.md
