[project]
name = "scoring-metagenomico"
version = "0.1.0"
description = "Scoring Metagenomico HPC - baseline Python (Fase 1)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
